[package]
name = "revenue-pass"
version = "0.1.0"
description = "Stoned Rabbits Revenue Sharing Pass Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "revenue_pass"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
